# ESP32CAM-Vehicle-Classifier

./: CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig
components/ssd1306/examples/double_buffering/mono_adafruit/: mono_adafruit.ino
components/tfmicro/: CMakeLists.txt
components/tfmicro/tensorflow/lite/micro/kernels/: quantize.cc
main/: CMakeLists.txt  detection_responder.cc  detection_responder.h  flight_vehicle_model_data.h  flying_vehicle_model_data.h  image_provider.h  main_functions.cc  main_functions.h  materials_model_data.h  model_settings.cc  model_settings.h  person_detect_model_data.h
main/esp/: app_camera_esp.c  app_camera_esp.h
main/esp32_interfacing/: app_camera_esp.h
main/person_model_grayscale/: person_detect_model_data.cc
training_model/: README.md
